--- a/WeatherApp/app/build.gradle
+++ b/WeatherApp/app/build.gradle
@@ -46,8 +46,10 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'androidx.room:room-runtime:2.3.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
     kapt 'androidx.room:room-compiler:2.3.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.2'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
